--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
     "@tailwindcss/typography": "^0.5.0",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.3.1",
     "gray-matter": "^4.0.2",
     "next": "latest",
@@ -30,6 +31,7 @@
     "next-remote-watch": "1.0.0",
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.7.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
