--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mapbox/rehype-prism": "^0.8.0",
     "@tailwindcss/typography": "^0.5.0",
     "bootstrap": "^5.2.3",
@@ -32,7 +36,8 @@
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.1",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-fontawesome": "^1.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
